<resources>
    <string name="app_name">LANDD</string>
    <string name="title_task">Task</string>
    <string name="title_host">Host</string>
    <string name="process">进度</string>
    <string name="speed">网速</string>
    <string name="filename">Task1</string>
    <string name="filetype">文件类型</string>
    <string name="pause">暂停</string>
    <string name="下载">DownLoading(2)</string>
    <string name="完成">Finish(2)</string>
    <string name="fileSize">100MB</string>
    <string name="FinishTime">2020-11-11 0:04</string>
    <string name="delete">删除</string>
    <string name="setting">设置</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>