<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fileType"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/filetype"
                app:srcCompat="@drawable/file_pdf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fileName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="3"
                        android:text="@string/filename" />

                    <ImageView
                        android:id="@+id/pause"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="0.8"
                        android:contentDescription="@string/pause"
                        app:srcCompat="@drawable/pause" />
                </LinearLayout>

                <com.rey.material.widget.ProgressView
                    android:id="@+id/process"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="0.2"
                    app:pv_autostart="true"
                    app:pv_circular="false"
                    app:pv_progress="0"
                    app:pv_progressMode="determinate" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/doenLoadText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/process" />

                    <TextView
                        android:id="@+id/downloadSpeed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/speed" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>